--- a/contactt-app/src/components/AddContactt.css
+++ b/contactt-app/src/components/AddContactt.css
@@ -1,25 +1,60 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-}
+
 .field{
     display: flex;
     margin-bottom: 2vw;
     justify-content: space-around;
 }
 .formm {
+    margin-top: 9vh !important;
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: 0.8;
+    background: white I !important;
+    background: linear-gradient(
+      to right bottom,
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.06)
+    );
     text-align:center;
-    border-radius: 1.2vw 2vw ;
-    min-height: 70vh;
-    max-width: 60vw;
+    border-radius: 1.2vw 2vw;
+    padding: 6.5rem;
+    max-width: 40vw;
     margin: auto;
-    box-shadow: 5px 5px 7px rgb(196, 195, 195);
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    border-left: 1px solid rgba(255, 255, 255, 0.3);
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px !important;
+    /*background-clip: padding-box;*/
+    backdrop-filter: blur(20px);
+    
+    
+    
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    position: relative;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    border-left: 1px solid rgba(255, 255, 255, 0.3);
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    /*background-clip: padding-box;*/
+    border-radius: 10px !important;
+    height: 2.5rem;
+    min-width: 30vw;
+    max-width: 100%;
+    margin-bottom: 7vh;
+}
+.field input{
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    color: #fff;
+    outline: none;
+    padding-left: 0.625rem;
 }
 
 .field>div {
@@ -29,12 +64,33 @@
     margin-bottom: 4vw;
     color:darkslategrey;
 }
-.formm label{
-    padding-right:10px;
-    color: darkslategrey;
-    font-size: 21px;
-    font-weight: bolder;
+.field label{
+    display: inline-block;
+    padding: 0 10px;
+    /*background-color: #001724;*/
+    color: #fff;;
+    font-size: 0.9rem;
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    font-weight: bold;
+
+    
+  
+    
 } 
+.field:hover label{
+    transform: translate(0,-4px);
+}
+.formm button {
+    min-width: 30vw;
+    background: linear-gradient(110deg, rgba(187, 20, 226), rgba(21, 32, 227));
+    border-radius: 5px;
+    border-color: transparent;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 7px;
+}
 .formm div h1{
     margin-bottom: 3vw;
 }
@@ -43,14 +99,7 @@ form button{
     width:50%;
 }
 
-.item{
-    display: flex;
-    justify-content: space-between;
-}
-.item > div{
-    
-    margin-top: 10px;
-}
+
 img{
     width: 60px;
     height:60px;
@@ -58,4 +107,10 @@ img{
 }
 i{
     margin-top: 10px;
+}
+.formm div {
+    gap: 60px;
+}
+form .iconn {
+    margin-bottom: 20px;
 }
