--- a/contactt-app/src/components/contactDetails.css
+++ b/contactt-app/src/components/contactDetails.css
@@ -15,7 +15,7 @@
     text-align:center;
     border-radius: 1.2vw 2vw;
     padding: 6.5rem;
-    max-width: 40vw;
+    max-width: 60vw;
     margin: auto;
     border-top: 1px solid rgba(255, 255, 255, 0.3);
     border-left: 1px solid rgba(255, 255, 255, 0.3);
@@ -32,4 +32,5 @@
     border: none;
     padding: 10px;
     border-radius: 24px;
+    width: 30vw;
 }
